--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                 <div class="card-icon">🌑</div>
             </div>
 
-            <div class="game-card disabled">
+            <div class="game-card p4g-style" onclick="app.openGame('p4g')">
                 <div class="card-content">
                     <h3>PERSONA 4 GOLDEN</h3>
-                    <p>Estado: Offline / Fog Warning</p>
+                    <p>Estado: Midnight Channel On-Air</p>
                 </div>
                 <div class="card-icon">📺</div>
             </div>
@@ -68,11 +68,7 @@
             </div>
         </header>
 
-        <nav class="modules-nav">
-            <button onclick="app.loadModule('school')">📝 Escuela</button>
-            <button onclick="app.loadModule('social')">🤝 Vínculos</button>
-            <button onclick="app.loadModule('missing')" class="alert-text">🕵️ Desaparecidos</button>
-            <button onclick="app.loadModule('fusions')">🔮 Fusiones</button>
+        <nav class="modules-nav" id="modules-container">
         </nav>
 
         <div id="data-display" class="data-viewport">
