agregado como app

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Kirijo OS</title>
     
     <link rel="icon" href="assets/favicon.ico" type="image/png">
-    
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;700&display=swap" rel="stylesheet">
 </head>
