Adición de persona 3 reload y persona 5 royal

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kirijo OS</title>
     
-    <link rel="icon" href="assets/favicon.ico" type="image/png">
+    <link rel="icon" href="assets/favicon.ico" type="image/jpg">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;700&display=swap" rel="stylesheet">
@@ -39,6 +39,14 @@
                 <div class="card-icon">🌕</div>
             </div>
 
+            <div class="game-card p3r-glow" onclick="app.openGame('p3r')">
+                <div>
+                    <h3>PERSONA 3 RELOAD</h3>
+                    <p>Dark Hour / Reloaded System</p>
+                </div>
+                <div class="card-icon">🌊</div>
+            </div>
+
             <div class="game-card p4g-glow" onclick="app.openGame('p4g')" style="border-left-color: #ffe600;">
                 <div>
                     <h3 style="color:#ffe600">PERSONA 4 GOLDEN</h3>
@@ -46,29 +54,21 @@
                 </div>
                 <div class="card-icon">📺</div>
             </div>
+            
+            <div class="game-card p5r-glow" onclick="app.openGame('p5r')" style="border-left-color: #ff0000;">
+                <div>
+                    <h3 style="color:#ff0000">PERSONA 5 ROYAL</h3>
+                    <p>Phantom Thieves / Mementos</p>
+                </div>
+                <div class="card-icon">🎭</div>
+            </div>
 
             <h2 style="margin-top: 40px; color: #444; border-bottom: 1px solid #444;">ENCRIPTADO / PRÓXIMAMENTE</h2>
-
-            <div class="game-card disabled" style="border-left-color: #00b0ff; opacity: 0.6;">
-                <div>
-                    <h3 style="color:#888;">PERSONA 3 RELOAD</h3>
-                    <p>Dark Hour - Reloaded System</p>
-                </div>
-                <div class="card-icon">🔒</div>
-            </div>
 
             <div class="game-card disabled" style="border-left-color: #ffca28; opacity: 0.6;">
                 <div>
                     <h3 style="color:#888;">PERSONA 4 REVIVAL</h3>
                     <p>Midnight Channel - Signal Lost</p>
-                </div>
-                <div class="card-icon">🔒</div>
-            </div>
-
-            <div class="game-card disabled" style="border-left-color: #ff0000; opacity: 0.6;">
-                <div>
-                    <h3 style="color:#888;">PERSONA 5 ROYAL</h3>
-                    <p>Phantom Thieves - Take Your Heart</p>
                 </div>
                 <div class="card-icon">🔒</div>
             </div>
